# apollo-protocol

./: .gitignore  CHANGELOG.md  CONTRIBUTION.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  clippy.toml  deny.toml  generate_docs.sh  rustfmt.toml  spellcheck.toml  taplo.toml  tarpaulin.toml
.githooks/: pre-commit
.github/workflows/: audit.yml  build.yml  codecov.yml  format_and_lint.yml  rust_optimizer.yml  vercheck.yml
examples/: graph-schema.rs
src/: adaptor.rs  factory.rs  lib.rs  oracle.rs  querier.rs  router.rs  strategy_token.rs  utils.rs
src/adaptor/: contract.rs  msg.rs
src/graph/: algo.rs  entities.rs  mod.rs  state.rs
src/graph/tests/: mock_querier.rs  tests.rs
src/legacy_strategy/: msg.rs
src/legacy_strategy/strategies/: mod.rs
src/legacy_strategy/strategies/autocompound/: msg.rs
src/legacy_vault/: msg.rs
src/strategy/: convex.rs  mod.rs  msg.rs  querier.rs  reply.rs
src/tests/: migration_test.rs  mock_querier.rs  mod.rs  state.rs  tests.rs
src/utests/: mod.rs  querier.rs
tests/: integration_test.rs
