[package]
name = "apollo-protocol"
version = "1.0.0"
authors = ["Apollo Dev"]
edition = "2018"

[dependencies]
cosmwasm-std = { version = "1.0.0", features = ["iterator"]}
schemars = "0.8.5"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw20 = { version = "0.13.2" }
cw20-base = { version = "0.13.2", features = ["library"] }
cw-storage-plus = "0.13.2"
cosmwasm-storage = "1.0.0"
apollo-asset = { git = "https://github.com/apollodao/apollo-asset.git", tag = "v0.2.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }

[profile.release]
overflow-checks = true
