[package]
authors = ["Apollo Dev"]
edition = "2018"
name = "apollo-protocol"
version = "1.0.0"

[dependencies]
apollo-asset = {git = "https://github.com/apollodao/apollo-asset.git", tag = "v0.2.1" }
cosmwasm-std = {version = "1.0.0", features = ["iterator"]}
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw20 = {version = "0.13.2"}
cw20-base = {version = "0.13.2", features = ["library"]}
schemars = "0.8.5"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0"}

[profile.release]
overflow-checks = true
