[package]
authors = ["Apollo Dev"]
edition = "2018"
name = "apollo-protocol"
version = "1.0.0"

[dependencies]
# Why apollo-asset dependency?
apollo-asset = {git = "https://github.com/apollodao/apollo-asset.git", tag = "v0.2.1"}
cosmwasm-std = {version = "1.0.0", features = ["iterator"]}
cw-storage-plus = "0.13.4"
cw20 = {version = "0.13.4"}
cw20-base = {version = "0.13.4", features = ["library"]}
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.24"}
# Remove this
cosmwasm-storage = "1.0.0"

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0"}

[profile.release]
overflow-checks = true
